welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: not found: value ||
      case 0||6 if (vacation) => return ("off")
            ^alarmClock:4: error: not found: value ||
      case 0||6 => return "10:00"
            ^